Yet another attept to fix mode toggle styles after click on mobile

--- a/docs/styles/extra.css
+++ b/docs/styles/extra.css
@@ -24,6 +24,11 @@
     display: inline-block;
     vertical-align: middle;
 }
+@media (hover: none) {
+    #robot-mode-widget {
+        opacity: 1;
+    }
+}
 #robot-mode-toggle {
     position: relative;
     width: 42px;
